# ConHub

./: .dockerignore  .env.auth  .env.example  .eslintrc.json  .gitignore  .npmrc  ARCHITECTURE_MIGRATION.md  BRANCH_FETCH_FIX.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DOCKER.md  ENV_SETUP.md  FEATURE-TOGGLES.md  FIXES_APPLIED.md  GITHUB-COPILOT-INTEGRATION.md  LOGGING_ADDED.md  MCP-IMPLEMENTATION.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_REORGANIZATION.md  README.md  README_MICROSERVICES.md  REFACTORING_SUMMARY.md  REORGANIZATION.md  SERVICES.md  WARP.md  azure-container-apps.yml  check-builds.ps1  components.json  debug-branch-fetch.js  deploy-to-azure.ps1  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.yml  feature-toggles.json  index.html  mcp-github-copilot.json  monitor-builds.ps1  next.config.js  package-lock.json  (+14 more)
agentic/: Cargo.toml
agentic/src/: main.rs
auth/: .env.example  Cargo.toml  Dockerfile
auth/.sqlx/: query-0bbcaf8b23db0e98900ac05821fe7d662c06ba476ebeaacdfba1b33e2895685d.json  query-15aaad68e19926618a238b8de0402a9758284703d1b39a900e06ce132898c561.json  query-2741d3c192a80315e9f8f96b0f9646db6cbd5145b1f936a96ce06fb660cf13ef.json  query-369f6d03b1371a90e5a888d416d51594ca1a3f697290b6b4b886107c88ed5bdc.json  query-3cfced454f2e301bfbbdf4835dfaffc666406f3035f459f715ddafd917aebec9.json  query-77ae92bf298235f458114ca7a42e222f15a542e5a50291510151bcfe416dd5b8.json  query-7ed56777b335f80b5de5c2ec9ca5c83d36195b77e3cc782bddbf2bbacc045ef2.json  query-8bc5d7ea79efc3db0103b3e759e94a50f96e96d8d7026ab5aa9f180587d1a3dd.json  query-8cdd05c1989b29d28715c7c3b706de63c7722040db0599fe15e0c2d6b645c069.json  query-952137647b3cc3a23038fa90a9a428fc77cc9ab3932e6e33b21daac2967b4e49.json  query-959af4a55aba02d635c205e53523416c061474a07180bc80a19e888339220258.json  query-9ff2723e8c467f2fd71349cf10052b582932dbcf32bec4cd05e5e3bce72481b5.json  query-b174ec691da97b84c501ff08efe9acf16fe3550ce53ee17dd6fa3df074cbfde4.json  query-b647f919946c7704b6c28a9b53ecae2b61cd73ec138219a950cdab0e132f560a.json  query-b694f3f3854cf8ff4d17a0c8ff524f53b8ef432818423b7587465cb11bf08466.json  query-b9f7d53ba23f4ba626b68a62c11dfd90467005a3720cc3d22a6fcfae9a95071c.json  query-b9fac5d3268d58e76f2e4f3db7963e08a07996bba5e2ae735b60fadfc67e1cbd.json  query-c14c23f6f6a6740ca9472533c834692294956950d69314ddd8a164d62f57408f.json  query-cb8921e728055e82dd9c20e6c467417f2543ead779c1ce0a8bb6188f40e82a92.json  query-d75ea5c306ae96ebf6aeed576900603188f37a8351abbb74a83666b084b4beb0.json  query-d9747f46bb2c3b8bc54fb9eb21caa01ffa4a9ba481cb27dcc4fe2aa128a91514.json  query-d9dfcd770aa99d7b4d8944740d681fe3a1d72626de1cfb77ae130cb702a21d22.json  query-e405794bca3a8549b5ca841ce9699f949060900a251b0024c3dabd710928d5e0.json  query-e6265d9fac8f52e3d2195101ebae10fd2967b6354426cf5f6b90f8f01355dfc2.json  query-f7af2b67c1f31216f432e1b9e1701484f8b214c4ac327e11eec4089a4b06ed18.json  query-fe54bc3f99b9dc956bcbfcba5e47cf23d536c465a6ac6d456af47ff33c5ee280.json
auth/migrations/: 001_create_auth_tables.sql
auth/src/: lib.rs  main.rs
auth/tests/: integration_tests.rs  mod.rs  security_tests.rs
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_schema.sql  001_social_tables.sql  002_billing_schema.sql  003_ruleset_schema.sql  007_ai_rule_bank_schema.sql
backend/src/: config.rs  errors.rs  lib.rs  main.rs  state.rs
billing/: .env.example  Cargo.toml  Dockerfile
billing/.sqlx/: query-017dec4e9109b0e61020a2cf478163b5da5cd94d0dc5e114c5e2037a7cab5f9e.json  query-038afe08056da39fd2df7d7b60f4e4d9de56a48e28da03aa794d0058408b7f28.json  query-0dcb2a0780c1e3137ae13b8582fc32ddb1b1b634680859dd9c5d26a12b4cd0d5.json  query-0ed2241378de83cd125b7a47b29b753d9c8a60312cba3433d1612fbf3267b20e.json  query-187ac10ac690b99369bb0c8f2c7f419f42692742032d9aa446739096c96bc173.json  query-1dd4a9d4343d3c60b7b33160209c4c14ffc48026151f21a43058c480162b0297.json  query-1f64890a306e9e0771cb2d3c625f38fc8b7a052ae7113e4156496318d3a432f8.json  query-3d15d251a658823dcc00137e35f5c714208bbe927ca1539c08767a108886b03e.json  query-4807d59825cd58d0724722d148111a96d1668ccdae3ed94aae9091e56ad37e09.json  query-4dd81fe29f5400130dab2365ad3e2d5a14fd56d39ed63aedc3238ae1558a78b8.json  query-549509a09385fd7459739b932de00cd9ecd175e3bbff4fe4c1e992cbefd8f683.json  query-5b006ef3fcd9ae2537f5ec4ddb363a92c8660212b1cdfd075d2b95a13b1ef197.json  query-6dafb83a308c55802942e172b2ab8c91dbd33e4b94064cf9c157a1ea2a8e4c6a.json  query-73c60a4d4d62e5df3c3e9232830fcb1eeab2e029480e06d52376aa31ee5fac69.json  query-7708178898db95011e3c8bc1c51c0e3141ee840af08687852dbfce0584f0f1ec.json  query-7845aed3fa324a52f440f9102a6e158eaca50c614551ea4eb82ae010d39a8397.json  query-7a8c4768c551acd19cc47c25bcead482b9056a2e96afcee16b93c7a6c2d486b1.json  query-7e424e1134db4a15ad14c19ab7d91ed8092109c03148ac9be4d066da12984ac3.json  query-86883cd0208df73defe356c72ab7d9294202edf4f9afa1e2d96b48a896fbb374.json  query-8c33caeb3e64b4f249d38afb6b02ab83ef3e9b8096c88eb47dc0b80a81762eba.json  query-965c2244c231fd7069c00e0df861447fc2b2b2d0ab410c81997856767c163382.json  query-9957c0485c88e72f46f5c66880ee8cc2ef86fa7fb990202a7a99e1e4a7d016aa.json  query-9b7701311d745652db3a11f3def9ca2f8f3679024e05db3354083eeeba33daf7.json  query-c3018cb474e77c06f80e456fa6da1e5285ddd6e37edca45281ff640a64de34b0.json  query-c513a69e351a8999f0041553a49034e99bb388212b7b022abccd1ce2d684b715.json  query-c7e9761236e4c59b2bba8a7b484acadc4406f55582519e250242ba7e760c90bb.json  (+5 more)
billing/src/: lib.rs  main.rs
chunker/: .env.example  Cargo.toml  Dockerfile  README.md
chunker/src/: main.rs  models.rs
client/: .env.example  Cargo.toml  Dockerfile
data/: .env.example  Cargo.toml  Dockerfile
database/: .gitignore  Cargo.toml  docker-compose.yml  schema.sql
decision_engine/: .gitignore  Cargo.toml  Dockerfile
embedding/: .env.example  Cargo.toml  Dockerfile  FUSION_README.md  fusion.json
graph/: Cargo.toml  Dockerfile
indexers/: Cargo.toml  Dockerfile  README.md
lexor/: Cargo.toml  README.md
plugins/: .env.example  Cargo.toml  Dockerfile
security/: .env.example  Cargo.toml  Dockerfile
vector_rag/: Cargo.toml  Dockerfile
(+1498 files in other folders)
