[package]
name = "conhub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "conhub-backend"
path = "backend/src/main.rs"

[[bin]]
name = "lexor"
path = "lexor/src/main.rs"

[dependencies]
# Shared dependencies
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Advanced Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
tracing-actix-web = "0.7"
tracing-appender = "0.2"
log = "0.4"
env_logger = "0.10"

# Performance and Monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
sysinfo = "0.30"

reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
url = "2.4"
async-trait = "0.1"
thiserror = "1.0"
dotenv = "0.15"

# Lexor-specific dependencies
tantivy = "0.22"
walkdir = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
git2 = "0.19"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-java = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-go = "0.21"
tree-sitter-typescript = "0.21"
once_cell = "1.19"
rayon = "1.8"
ignore = "0.4"
mime_guess = "2.0"
encoding_rs = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
futures = "0.3"
actix-multipart = "0.7"
actix-files = "0.6"
num_cpus = "1.16"
tempfile = "3.8"

# Authentication dependencies
bcrypt = "0.15"
jsonwebtoken = "9.2"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
validator = { version = "0.18", features = ["derive"] }
rust_decimal = { version = "1.33", features = ["serde"] }
futures-util = "0.3"
actix-session = "0.9"
redis = { version = "0.24", features = ["tokio-comp"] }

# Performance and caching dependencies
bincode = "1.3"
flate2 = "1.0"
lru = "0.12"

# Security dependencies
rsa = "0.9"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
sha1 = "0.10"
tokio-test = "0.4"

# Social Platform Integration dependencies
oauth2 = "4.4"
base64 = "0.21"
anyhow = "1.0"

# URL encoding for connectors
urlencoding = "2.1"

# Qdrant vector database
qdrant-client = "1.7"
