[workspace]
members = [
    "backend",
    "auth",
    "billing",
    "ai",
    "security",
    "indexers",
    "shared/models",
    "shared/utils",
    "shared/middleware",
    "shared/config",
]

[workspace.dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
actix-multipart = "0.7"
actix-files = "0.6"
actix-session = "0.9"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
tracing-actix-web = "0.7"
tracing-appender = "0.2"
log = "0.4"
env_logger = "0.10"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
sysinfo = "0.30"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
lazy_static = "1.4"
url = "2.4"
thiserror = "1.0"
dotenv = "0.15"
anyhow = "1.0"
once_cell = "1.19"

# Search and indexing
tantivy = "0.22"
walkdir = "2.4"
regex = "1.10"
ignore = "0.4"

# Cryptography and hashing
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
md5 = "0.7"
sha1 = "0.10"
bcrypt = "0.15"
rsa = "0.9"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Git operations
git2 = "0.19"

# Tree-sitter parsers
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-java = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-go = "0.21"
tree-sitter-typescript = "0.21"

# Parallelism
rayon = "1.8"
num_cpus = "1.15"

# File operations
mime_guess = "2.0"
encoding_rs = "0.8"
tempfile = "3.8"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Collections
dashmap = "5.5"
indexmap = "2.0"
itertools = "0.12"
lru = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
validator = { version = "0.18", features = ["derive"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Compression and serialization
bincode = "1.3"
flate2 = "1.0"

# TLS
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-test = "0.4"

# OAuth and authentication
oauth2 = "4.4"
jsonwebtoken = "9.2"
base64 = "0.21"

# URL encoding
urlencoding = "2.1"

# External services
qdrant-client = "1.7"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper-rustls"] }

# Config parsing
yaml-rust2 = "0.10.4"

# Additional web framework
warp = "0.3"
