[workspace]
resolver = "2"

members = [
    "auth",
    "backend",
    "billing",
    "client",
    "data",
    "embedding",
    "indexers",
    "plugins",
    "security",
    "webhook",
    "shared/config",
    "shared/middleware",
    "shared/models",
    "shared/plugins",
    "shared/utils",
]

# Workspace-wide dependency versions for consistency
[workspace.dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
actix-multipart = "0.7"
actix-files = "0.6"
actix-session = { version = "0.9", features = ["redis-rs-tls-session"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
tracing-actix-web = "0.7"
log = "0.4"
env_logger = "0.11"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Vector database
qdrant-client = "1.7"

# Authentication & Security
bcrypt = "0.15"
jsonwebtoken = "9.2"
oauth2 = "4.4"
argon2 = "0.5"
ring = "0.17"
base64 = "0.21"
rsa = "0.9"
rand = "0.8"
constant_time_eq = "0.3"

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Configuration
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# GraphQL
async-graphql = "6"
async-graphql-actix-web = "6"

# Utilities
lazy_static = "1.4"
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
arc-swap = "1.6"
crossbeam = "0.8"
urlencoding = "2.1"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Email
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }

# Payment processing
stripe-client = "0.22"

# AI
async-openai = "0.17"

# File operations
walkdir = "2.4"
tempfile = "3.8"
mime_guess = "2.0"
encoding_rs = "0.8"

# Git operations
git2 = "0.19"

# URL parsing
url = "2.4"

# Parallelism
rayon = "1.8"
num_cpus = "1.15"

# Search
tantivy = "0.22"
regex = "1.10"

# Schema generation
schemars = "0.8"

# Additional data structures
lru = "0.12"
indexmap = { version = "2.0", features = ["serde"] }
itertools = "0.12"

# Crypto
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"

# Tree-sitter
tree-sitter = "0.22"

# Python integration
pyo3 = { version = "0.27", features = ["auto-initialize"] }

# Test utilities
[workspace.dev-dependencies]
serial_test = "3.0"
wiremock = "0.5"
expect-test = "1.4"
tokio-test = "0.4"

# Profile optimizations
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Optimize dependencies even in dev mode for faster compile times
[profile.dev.package."*"]
opt-level = 2

# Production-like profile for testing
[profile.prod-test]
inherits = "release"
debug = true
strip = false
