[package]
name = "conhub-auth"
version = "1.0.0"
edition = "2021"

[dependencies]
bcrypt = "0.15"
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
uuid = { version = "1.6", features = ["v4"] }
conhub-shared-models = { path = "../shared/models" }
