[package]
name = "chunker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# UUID & time
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"

# Shared models
conhub-models = { path = "../shared/models" }

# Regex for code parsing
regex = "1.10"
lazy_static = "1.4"

# Async traits
async-trait = "0.1"

# Advanced chunking dependencies
# Tree-sitter for AST-based code parsing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"

# Token counting for LLM context limits
tiktoken-rs = "0.5"

# Markdown parsing
comrak = { version = "0.18", default-features = false }
pulldown-cmark = "0.9"

# HTML parsing
html5ever = "0.26"
markup5ever_rcdom = "0.2"

# Redis for caching
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# SHA256 for cache keys
sha2 = "0.10"
