[package]
name = "data-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-service"
path = "src/main.rs"

[dependencies]
# Shared workspace libraries
conhub-models = { path = "../shared/models" }
conhub-utils = { path = "../shared/utils" }
conhub-middleware = { path = "../shared/middleware" }
conhub-config = { path = "../shared/config" }

# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-multipart = "0.7"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
tracing-actix-web = "0.7"
log = "0.4"
env_logger = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Vector database
qdrant-client = "1.7"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Git operations
git2 = "0.19"

# URL parsing
url = "2.4"

# File operations
walkdir = "2.4"
tempfile = "3.8"
mime_guess = "2.0"
encoding_rs = "0.8"

# Configuration
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# Encoding
base64 = "0.21"
urlencoding = "2.1"

# Authentication
oauth2 = "4.4"

# Web framework (additional)
warp = "0.3"

# Utilities
lazy_static = "1.4"
regex = "1.10"
validator = { version = "0.16", features = ["derive"] }
