[package]
name = "data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database ORM
conhub-database = { path = "../database", features = [] }
conhub-middleware = { path = "../shared/middleware" }
conhub-models = { path = "../shared/models" }
conhub-observability = { path = "../shared/observability" }

actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
oauth2 = "4.0"
mime_guess = "2.0"
thiserror = "1.0"
anyhow = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
sha2 = "0.10"
strsim = "0.11"
fuzzy-matcher = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
urlencoding = "2.1"
jsonwebtoken = "9.2"
