[package]
name = "conhub-database"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros", "ipnetwork", "rust_decimal"] }
rust_decimal = { version = "1.33", features = ["serde"] }
ipnetwork = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"
dotenvy = "0.15"
bcrypt = "0.15"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
