[package]
name = "decision_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for calling vector_rag and graph_rag
reqwest = { version = "0.11", features = ["json"] }

# UUID & time
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Shared models
conhub-models = { path = "../shared/models" }
conhub-config = { path = "../shared/config" }
conhub-observability = { path = "../shared/observability" }

# Redis for caching
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# Async traits
async-trait = "0.1"
