[package]
name = "embedding"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "embedding"
path = "src/main.rs"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
ndarray = "0.15"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
