[package]
name = "embedding"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "embedding"
path = "src/main.rs"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
ndarray = { version = "0.15", features = ["rayon"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
rayon = "1.8"
bincode = "1.3"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-openai = "0.16"
google-cloud-aiplatform-v1 = "1.2.0"
pyo3-async-runtimes = "0.27.0"
retryable = "0.1.1"
phf = { version = "0.11", features = ["macros"] }
urlencoding = "2.1"
async-trait = "0.1"
sha2 = "0.10"
conhub-config = { path = "../shared/config" }
pyo3 = { version = "0.27", features = ["auto-initialize"] }
reqwest = { version = "0.11", features = ["json"] }



[dev-dependencies]
tempfile = "3.8"
