[package]
name = "graph"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
neo4rs = "0.7"

# Vector database
qdrant-client = { version = "1.7", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenv = "0.15"

# Shared libraries
shared-models = { path = "../shared/models" }
shared-config = { path = "../shared/config" }

# String similarity
strsim = "0.11"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Graph algorithms
petgraph = "0.6"

# Async trait
async-trait = "0.1"
