[package]
name = "conhub-indexers"
version = "0.1.0"
edition = "2021"

[lib]
name = "conhub_indexers"
path = "src/lib.rs"

[dependencies]
# Shared workspace libraries (if needed)
# conhub-models = { path = "../shared/models" }
# conhub-utils = { path = "../shared/utils" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schema generation
schemars = "0.8"

# Compile-time string formatting
const_format = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
log = "0.4"

# Search and indexing
tantivy = "0.22"
walkdir = "2.4"
regex = "1.10"
ignore = "0.4"

# File operations
mime_guess = "2.0"
encoding_rs = "0.8"
tempfile = "3.8"

# Tree-sitter parsers
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-java = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-go = "0.21"
tree-sitter-typescript = "0.21"

# Parallelism
rayon = "1.8"
num_cpus = "1.15"

# Utilities
lazy_static = "1.4"
once_cell = "1.19"
dashmap = "5.5"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Vector database
qdrant-client = "1.7"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Git operations
git2 = "0.19"

# Collections
indexmap = "2.0"
itertools = "0.12"

# Config parsing
yaml-rust2 = "0.10.4"

# Configuration
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# Crypto
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"

# URL parsing
url = "2.4"
