[package]
name = "conhub-indexers"
version = "0.1.0"
edition = "2021"

[lib]
name = "conhub_indexers"
path = "src/lib.rs"

[dependencies]
# Shared workspace libraries (if needed)
# conhub-models = { path = "../shared/models" }
# conhub-utils = { path = "../shared/utils" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.4"

# Validation and derive macros
validator = { version = "0.16", features = ["derive"] }
derivative = "2.2"

# Schema generation
schemars = "0.8"

# Compile-time string formatting
const_format = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
log = "0.4"
env_logger = "0.10"

# Search and indexing
tantivy = "0.22"
walkdir = "2.4"
regex = "1.10"
ignore = "0.4"

# File operations
mime_guess = "2.0"
encoding_rs = "0.8"
tempfile = "3.8"

# Tree-sitter parsers
tree-sitter = "0.22"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-html = "0.20"
tree-sitter-json = "0.23"
tree-sitter-kotlin = "0.3"
tree-sitter-kotlin-ng = "1.0"
tree-sitter-md = "0.2"
tree-sitter-pascal = "0.10"
tree-sitter-php = "0.22"
tree-sitter-ruby = "0.23"
tree-sitter-sql = "0.0.2"
tree-sitter-swift = "0.4"
tree-sitter-toml = "0.20"
tree-sitter-toml-ng = "0.6"
tree-sitter-sequel = "0.3"
tree-sitter-xml = "0.6"
tree-sitter-yaml = "0.6"
tree-sitter-c-sharp = "0.23"
tree-sitter-css = "0.23"
tree-sitter-fortran = "0.5"
tree-sitter-r = "1.0"
tree-sitter-scala = "0.23"
tree-sitter-solidity = "1.2"

# Parallelism
rayon = "1.8"
num_cpus = "1.15"

# Utilities
lazy_static = "1.4"
once_cell = "1.19"
dashmap = "5.5"
retryable = "0.1"

# Date and time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Vector database
qdrant-client = "1.7"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Web framework
actix-web = "4.0"

# Case-insensitive string handling
unicase = "2.7"

# Pattern matching
globset = "0.4"

# HTTP body utilities
http-body-util = "0.1"

# Google Cloud GAX
google-cloud-gax = "1.1.0"
google-cloud-aiplatform-v1 = "1.2.0"

# AWS SDK
aws-config = "0.57"
aws-sdk-sqs = "0.37"
aws-sdk-s3 = "0.37"
aws-types = "0.57"

# Azure SDK
azure_core = "0.19"
azure_identity = "0.19"
azure_storage = "0.19"
azure_storage_blobs = "0.19"

# Git operations
git2 = "0.19"

# Collections
indexmap = { version = "2.0", features = ["serde"] }
itertools = "0.12"

# Config parsing
yaml-rust2 = "0.10.4"

# Configuration
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# Crypto
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
base64 = "0.22"

# URL parsing
url = "2.4"

# Additional dependencies
phf = { version = "0.11", features = ["macros"] }
google-drive3 = "5.0"
tokio-postgres = "0.7"
neo4rs = "0.7"

# Python integration
pyo3 = { version = "0.26", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio", "tokio-runtime"] }
pythonize = "0.26"

# Commonly used runtime + utility crates referenced by sources; add as
# crate-local dependencies so `indexers` can compile in isolation. These
# versions are conservative; if the workspace provides other versions we
# can switch to those later.
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
rand = "0.8"
urlencoding = "2.1"
json5 = "0.3"
scraper = "0.14"
async-openai = "0.7"
bytes = "1"

hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.23"
hyper-util = { version = "0.1", features = ["full"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }

[dev-dependencies]
expect-test = "1.4"

[[bin]]
name = "unified-indexer"
path = "src/main.rs"
