[package]
name = "lexor"
version = "0.1.0"
edition = "2021"

[features]
default = ["git-support", "syntax-highlighting"]
git-support = ["git2"]
syntax-highlighting = ["tree-sitter"]

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenGrok-like indexing dependencies
tantivy = "0.21"
walkdir = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
git2 = "0.18"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-go = "0.20"
tree-sitter-typescript = "0.20"
once_cell = "1.19"
rayon = "1.8"
ignore = "0.4"
mime_guess = "2.0"
encoding_rs = "0.8"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
futures = "0.3"
actix-multipart = "0.6"
actix-files = "0.6"
num_cpus = "1.16"