[package]
name = "lexor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lexor"
path = "src/main.rs"

[features]
default = ["git-support", "syntax-highlighting"]
git-support = ["git2"]
syntax-highlighting = ["tree-sitter"]

[dependencies]
actix-web = { workspace = true }
actix-cors = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# OpenGrok-like indexing dependencies
tantivy = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
md5 = { workspace = true }
git2 = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-typescript = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
mime_guess = { workspace = true }
encoding_rs = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
actix-multipart = { workspace = true }
actix-files = { workspace = true }
num_cpus = { workspace = true }