[package]
name = "vector_rag"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vector_rag"
path = "src/main.rs"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
rayon = "1.8"
bincode = "1.3"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
retryable = "0.1.1"
phf = { version = "0.11", features = ["macros"] }
async-trait = "0.1"
sha2 = "0.10"
conhub-config = { path = "../shared/config" }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
urlencoding = "2.1"
conhub-models = { path = "../shared/models" }
[dependencies.tracing]
version = "0.1"

[dev-dependencies]
tempfile = "3.8"
